Add to do form as a component

--- a/src/assets/style/base/_typography.scss
+++ b/src/assets/style/base/_typography.scss
@@ -2,3 +2,19 @@
 .h1 {
     font-size: 5rem;
 }
+
+// Button
+.button {
+    font-size: 2rem;
+    padding: 1rem;
+    color: $white;
+    background-color: $black;
+    border-radius: 5px;
+}
+
+// Inputs
+.input-text {
+    font-size: 2rem;
+    padding: .5rem;
+    border-radius: 5px;
+}
